--- a/components/package.json
+++ b/components/package.json
@@ -44,13 +44,13 @@
         "react-native-paper": "^4.0.0",
         "react-native-safe-area-context": "^3.0.0",
         "react-native-vector-icons": "^7.0.0 || ^8.0.0",
-        "@pxblue/react-native-vector-icons": "^1.0.0"
+        "@brightlayer-ui/react-native-vector-icons": "^1.3.1-beta.0"
     },
     "devDependencies": {
         "@pxblue/eslint-config": "^2.0.4",
         "@pxblue/icons-svg": "^1.1.0",
         "@pxblue/prettier-config": "^1.0.2",
-        "@pxblue/react-native-vector-icons": "^1.0.0",
+        "@brightlayer-ui/react-native-vector-icons": "^1.3.1-beta.0",
         "@testing-library/react-native": "^7.2.0",
         "@types/color": "^3.0.0",
         "@types/faker": "^4.1.5",
